# zorba-email-module

./: CMakeLists.txt
cmake_modules/: FindCClient.cmake
cmake_modules/Windows/: FindCClient.cmake
examples/Queries/imap/: copy_example.xq  create_example.xq  create_rename_delete_example.xq  delete_example.xq  expunge_example.xq  fetch_envelope_example.xq  fetch_flags_example.xq  fetch_from_example.xq  fetch_message_example.xq  fetch_message_sequence_number_example.xq  fetch_subject_example.xq  fetch_uid_example.xq  list_example.xq  mimetypes_example.xq  move_example.xq  rename_example.xq  search_example.xq  set_flags_example.xq  status_example.xq  subscribe_example.xq  subscribe_unsubscribe_example.xq  unsubscribe_example.xq
examples/Queries/smtp/: html.xq  html_text_alternative.xq  simple_text.xq  text_with_image.xq
src/: CMakeLists.txt  README.txt  imap.xq  smtp.xq
src/cclient/: email_exception.h
src/com/zorba-xquery/www/modules/: CMakeLists.txt
src/com/zorba-xquery/www/modules/email/: CMakeLists.txt  README.txt  email.xsd  imap.xq  imap.xsd  smtp.xq
src/com/zorba-xquery/www/modules/email/cclient/: email_exception.cpp  imap_client.cpp  imap_client.h
src/com/zorba-xquery/www/modules/email/cclient.xq.src/: imap_client.cpp  imap_client.h
src/com/zorba-xquery/www/modules/email/imap.xq.src/: imap.cpp  imap.h  imap_function.cpp  imap_function.h  imap_module.cpp  imap_module.h
src/com/zorba-xquery/www/modules/email/smtp.xq.src/: email_function.cpp  email_function.h  email_module.cpp  email_module.h  mime_handler.cpp  mime_handler.h  mime_parser.cpp  mime_parser.h  smtp.cpp  smtp.h  smtp_function.cpp  smtp_function.h
src/imap.xq.src/: imap.cpp  imap.h  imap_function.cpp  imap_function.h  imap_module.h
src/smtp.xq.src/: mime_handler.cpp  mime_parser.cpp  mime_parser.h  smtp.cpp  smtp.h  smtp_function.cpp  smtp_function.h  smtp_module.cpp  smtp_module.h
